<resources>
    <string name="app_name">chatting_video</string>
    <string name="edit_user">이름</string>
    <string name="edit_email">이메일</string>
    <string name="edit_pwd">비밀번호</string>
    <string name="btn_back">뒤로가기</string>
    <string name="btn_join">회원가입</string>
    <string name="btn_login">로그인</string>
    <string name="txt_name">(알수없음)</string>
    <string name="txt_message">메세지</string>
    <string name="btn_send">전송</string>
</resources>